    for backward compatibility
  * added 'newrelic install' command to install a newrelic.yml file in the
    current directory
  * allow customization of log directories with newrelic.yml settings
  * optimization to execution time measurement
  * optimization to startup sequence
  * try creating log directory if it doesn't exist

v2.12.1
  * fix race condition in Delayed::Job instrumentation loading
  * fix glassfish detection in latest glassfish gem
  
v2.12.0
  * support basic instrumentation for ActsAsSolr and Sunspot

v2.11.3
  * fix bug in startup when running JRuby

v2.11.2
  * fix for unicorn not reporting when the proc line had 'master' in it
  * fix regression for passenger 2.0 and earlier
  * fix after_fork in the shim
  
v2.11.1
  * republished gem without generated rdocs

v2.11.0
  * rails3 instrumentation (no developer mode support yet)
  * removed the ensure_worker_thread started and instead defined an after_fork
    handler that will set up the agent properly in forked processes.
  * change at_exit handler so the shutdown always goes after other shutdown 
    handlers
  * add visibility to active record db transactions in the rpm transaction
    traces (thanks to jeremy kemper)
  * fix regression in merb support which caused merb apps not to start
  * added NewRelic::Agent.logger to the public api to write to the agent 
    log file.
  * optimizations to background thread, controller instrumentation, memory
    usage
  * add logger method to public_api
    
v2.10.8
  * fix bug in delayed_job instrumentation that caused the job queue sampler
    to run in the wrong place
  * change startup sequence and code that restarts the worker loop
    thread
  * detect the unicorn master and dont start the agent; hook in after_fork
  * fix problem with the Authlogic metric names which caused errors in
    developer mode.  Authlogic metrics now adhere to the convention of
    prefixing the name with  'Custom'