@@ -60,7 +60,7 @@ module NewRelic
         attr_reader :record_sql
         attr_reader :histogram
         attr_reader :metric_ids
-
+        attr_reader :url_rules
 
         def record_transaction(duration_seconds, options={})
           is_error = options[:is_error] || options[:error_message] || options[:exception]
@@ -278,20 +278,22 @@ module NewRelic
 
               # Our shutdown handler needs to run after other shutdown handlers
               # that may be doing things like running the app (hello sinatra).
-              if RUBY_VERSION =~ /rubinius/i 
-                list = at_exit { shutdown }
-                # move the shutdown handler to the front of the list, to
-                # execute last:
-                list.unshift(list.pop)
-              elsif !defined?(JRuby) or !defined?(Sinatra::Application)
-                at_exit { at_exit { shutdown } } 
+              if control.send_data_on_exit
+                if RUBY_VERSION =~ /rubinius/i 
+                  list = at_exit { shutdown }
+                  # move the shutdown handler to the front of the list, to
+                  # execute last:
+                  list.unshift(list.pop)
+                elsif !defined?(JRuby) or !defined?(Sinatra::Application)
+                  at_exit { at_exit { shutdown } } 
+                end
               end
             end
           else
-            control.log! "Agent configured not to send data in this environment - edit newrelic.yml to change this"
+            log.warn "Agent configured not to send data in this environment - edit newrelic.yml to change this"
           end
-          control.log! "New Relic RPM Agent #{NewRelic::VERSION::STRING} Initialized: pid = #$$"
-          control.log! "Agent Log found in #{NewRelic::Control.instance.log_file}" if NewRelic::Control.instance.log_file
+          log.info "New Relic RPM Agent #{NewRelic::VERSION::STRING} Initialized: pid = #$$"
+          log.info "Agent Log found in #{NewRelic::Control.instance.log_file}" if NewRelic::Control.instance.log_file
         end
 
         # Clear out the metric data, errors, and transaction traces.  Reset the histogram data.
@@ -330,7 +332,7 @@ module NewRelic
                   end
                   log.info "Reporting performance data every #{@report_period} seconds."
                   log.debug "Running worker loop"
-                  # note if the agent attempts to report more frequently than allowed by the server
+                  # Note if the agent attempts to report more frequently than allowed by the server
                   # the server will start dropping data.
                   @worker_loop = WorkerLoop.new
                   @worker_loop.run(@report_period) do
@@ -429,23 +431,22 @@ module NewRelic
               :validate => {:seed => control.validate_seed,
                             :token => control.validate_token }
 
-            connect_data.symbolize_keys!
-            
-            @agent_id = connect_data[:agent_run_id]
-            @report_period = connect_data[:data_report_period]
+            @agent_id = connect_data['agent_run_id']
+            @report_period = connect_data['data_report_period']
+            @url_rules = connect_data['url_rules']
 
             control.log! "Connected to NewRelic Service at #{@collector}"
-            log.debug "Agent ID = #{@agent_id}."
+            log.debug "Agent Run       = #{@agent_id}."
             log.debug "Connection data = #{connect_data.inspect}"
 
             # Ask the server for permission to send transaction samples.
             # determined by subscription license.
-            @should_send_samples &&= connect_data[:collect_traces]
+            @should_send_samples &&= connect_data['collect_traces']
 
             if @should_send_samples
               if @should_send_random_samples
                 @transaction_sampler.random_sampling = true
-                @transaction_sampler.sampling_rate = connect_data[:sampling_rate]
+                @transaction_sampler.sampling_rate = connect_data['sampling_rate']
                 log.info "Transaction sampling enabled, rate = #{@transaction_sampler.sampling_rate}"
               end
               log.info "Transaction tracing threshold is #{@slowest_transaction_threshold} seconds."
@@ -454,7 +455,7 @@ module NewRelic
             end
 
             # Ask for permission to collect error data
-            error_collector.enabled &&= connect_data[:collect_errors]
+            error_collector.enabled &&= connect_data['collect_errors']
 
             log.info "Errors will be sent to the RPM service." if error_collector.enabled
 
